<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tempBackground"
    android:gravity="center"
    android:padding="12dp"
    android:scaleType="centerCrop">

    <ImageView
        android:id="@+id/bowlImage2"
        android:layout_width="108dp"
        android:layout_height="104dp"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/btn_star"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/bowlImage"
                android:layout_width="108dp"
                android:layout_height="104dp"
                app:srcCompat="@android:drawable/btn_star"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bowl"
                android:textSize="35dp"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <ImageView
                android:id="@+id/saladImage"
                android:layout_width="91dp"
                android:layout_height="106dp"
                app:srcCompat="@android:drawable/btn_star"
                tools:srcCompat="@tools:sample/avatars" />
            <TextView
                android:id="@+id/text_view_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/salad"
                android:textSize="35dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/soupImage"
                android:layout_width="90dp"
                android:layout_height="107dp"
                tools:srcCompat="@tools:sample/avatars" />
            <TextView
                android:id="@+id/text_view_id3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soup"
                android:textSize="35dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/breadImage"
                android:layout_width="91dp"
                android:layout_height="106dp"
                app:srcCompat="@android:drawable/btn_star"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_view_id4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bread"
                android:textSize="35dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/drinkImage"
                android:layout_width="91dp"
                android:layout_height="106dp"
                app:srcCompat="@android:drawable/btn_star"
                tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_view_id6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/drink"
            android:textSize="35dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/checkoutImage"
                android:layout_width="91dp"
                android:layout_height="106dp"
                app:srcCompat="@android:drawable/btn_star"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_view_id5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/checkout"
                android:textSize="35dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>