<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/normalbowlchooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4f0e0d0e"
                    android:gravity="center"
                    android:text="@+string/pickYourBowl"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
                <CheckBox android:id="@+id/normalbowlsourdough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sourdough"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/normalbowlwholewheat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Wholewheat"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox android:id="@+id/normalbowlsalad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Salad"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/extra_information"
                    android:text="Extra Information"
                    android:textColor="@android:color/white"
                    android:background="#4f0e0d0e"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/bowl_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="submitButtonClicked"
                    android:text="@string/AddToCart" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>